fix search results alignment

--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -98,7 +98,6 @@
   flex-direction: column;
   overflow: hidden;
   width: 500px;
-  left: 1rem;
 
   @media screen and (max-width: 768px) {
     width: calc(100vw - 2 * 0.5rem);
